styles/global.css
@keyframes fade-in-opacity {
    0%   { opacity: 0; }
    30%  { opacity: 0; }
    100% { opacity: 1; }
}

@keyframes fade-in-opacity-smooth {
    0%   { opacity: 0; }
    100% { opacity: 1; }
}

@keyframes fade-out-opacity {
    0%   { opacity: 1; }
    100% { opacity: 0; }
}

html, body {
    padding: 0;
    margin: 0;
    font-family: 'Poppins', sans-serif;
    color: #030722;
}

p {
    line-height: 1.7;
}

a {
    color: #007060;
}

a.source {
    text-decoration: none;
}

a:hover {
    background-color: #385e62;
    color: #edffe3;
}

code {
    background-color: #d1dae1;
    color: #000;
    font-size: 1rem;
    border-radius: 4px;
}

/* Link on dark background */
footer a {
    color: #a0f0da;
}

/* Footer */

footer {
    margin-top: 4rem;
    padding: 1.6rem 2rem;
    font-size: 1.2rem;
    background-color: #2f2f3c;
    color: #e0e2ff;
    display: flex;
    justify-content: space-between;
}

footer a:hover {
    color: #edffe3;
    background-color: #385e62;
}

footer > * {
    width: calc(33.33334% - 2rem);
    padding: 0 1rem;
    text-align: center;
}

footer .center {
    display: flex;
    justify-content: center;
    align-items: baseline;
}

/* Sources hover tooltip */

#hover-tooltip {
    margin-top: 2rem;
    position: fixed;
    background-color: #385e62;
    color: #edffe3;
    padding: .1rem .2rem;
    border-radius: 4px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, .3);
    z-index: 1000;
    animation: fade-in-opacity-smooth .2s;
}

#hover-tooltip.vanish {
    animation: fade-out-opacity .8s;
}

#hover-tooltip .key-value {
    opacity: .8;
}

/* Fixed header */

.fixed-header {
    position: fixed;
    display: flex;
    justify-content: space-between;
    align-items: center;

    z-index: 100;

    left: 0;
    right: 0;
    top: 0;
    padding: .4rem 3rem;
    background-color: #fff;
    border-bottom: 1px solid #e7e9ee;
}

.fixed-header > a {
    text-decoration: none;
}

.fixed-header .brand {
    font-size: 1.6rem;
    font-weight: bold;
    position: relative;
}

.fixed-header .brand:hover::before {
    content: '';
    background-color: #385e62;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 100%;
    right: -46px;
}

.fixed-header .brand img {
    position: absolute;
    padding-left: .4rem;
}

.fixed-header .brand:hover img {
    filter: invert(100%) hue-rotate(125deg) brightness(222%);
}


.fixed-header nav > * {
    margin-left: 2rem;
    font-size: 1.4rem;
    text-decoration: none;
}

.fixed-header .language {
    font-size: 1rem;
    height: 100%;
    /* Animation to mask transition from <a/> to javascript-inserted element */
    animation: fade-in-opacity .88s;
}

.fixed-header .lang-and-nav {
    margin-left: 3rem;
    display: flex;
    align-items: baseline;
    flex-wrap: wrap;
    justify-content: right;
}

.fixed-header .lang-and-nav div {
    display: flex;
    align-items: center;
    background-color: #ffffff;
    border: 2px solid #d1dae1;
    border-top-left-radius: 1rem;
    border-bottom-left-radius: 1rem;
}

.fixed-header .lang-and-nav div:hover {
    border-color: #4b61ae;
}

.fixed-header .lang-and-nav div .flag {
    border: 2px solid #007060;
    flex-shrink: 0;
    border-radius: 50%;
}

.fixed-header .lang-and-nav.select-inside {
    align-items: center;
}

.fixed-header .language-select {
    border: none;
    box-shadow: none; /*inset 0 0 0 1px #adadad;*/
    background-color: transparent;
    color: #000;
    font-size: .9rem;
    font-family: inherit;
    cursor: pointer;
    /* Animation to mask transition from <a/> to javascript-inserted element */
    animation: fade-in-opacity .88s;
}

/* section horizontal info/pucture division */

.info-picture {
    display: flex;
    justify-content: center;
    align-items: center;
}

.info-picture img {
    max-width: 40%;
}

.info-picture.img-left .info {
    margin-left: 4rem;
    flex-shrink: 1;
}

.info-picture.img-right .info {
    margin-right: 4rem;
}

/* Voiceover */

.voiceover {
    animation: fade-in-opacity 3s;
}

.voiceover-button {
    margin: 0;
    padding: 0 8px;
    border: none;
    height: 32px;
    border-radius: 4px;
    background: none;
    cursor: pointer;
    position: relative;
    animation: fade-in-opacity .88s;
}

.voiceover-button img {
    width: 26px;
    height: 26px;
    max-width: 26px;
    align-self: baseline;
    margin: 0;
    padding: 0;
}

.voiceover-button:hover {
    background: #385e62;
}

.voiceover-button:hover img {
    filter: invert(100%);
}

/* Hiding the element visually, but allow it to be read by screen-redaers */

.visually-hidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute !important;
    width: 1px;
}

/* Reactivity */

@media(max-width: 800px) {
    .fixed-header .lang-and-nav {
        margin-left: 0;
    }
}

@media(max-width: 935px) {
    footer {
        flex-wrap: wrap;
        padding: 1rem 0;
        justify-content: center;
    }

    footer > * {
        width: auto;
        padding: 0 .7rem;
        text-align: center !important;
    }

    footer > * {
        margin-bottom: 1.2rem;
    }

    footer > :first-child {
        width: calc(100% - .6rem);
    }


    .info-picture {
        flex-direction: column;
    }

    .info-picture.img-left .info {
        margin-left: 0;
        margin-top: 2rem;
    }

    .info-picture.img-right .info {
        margin-right: 0;
        margin-bottom: 2rem;
    }

    .info-picture img {
        max-width: 100%;
    }
}

/* Mobile */
@media(max-width: 750px) {
    .fixed-header {
        flex-direction: column;
        padding: .2rem 0;
        align-items: baseline;
    }

    .fixed-header .brand {
        margin-left: 1rem;
    }

    .fixed-header nav {
        margin-top: .2rem;
        width: 100vw;
        display: flex;
        justify-content: center;
    }

    .fixed-header nav > * {
        margin: 0 .5rem;
        font-size: 1.2rem;
    }

    .fixed-header .lang-and-nav {
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    .fixed-header .lang-and-nav div {
        position: absolute;
        top: 10px;
        right: 1rem;
    }
}

@media(max-width: 386px) {
    .fixed-header nav > * {
        font-size: 1rem;
    }
}

